# everyutil-c

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  array_cumulative_product.c  array_fingerprint.c  array_intersections.c  array_machine.c  array_rotate_chunks.c  array_splice_multiple.c  array_symmetric_difference.c  build.ps1  build.sh  compact_map.c  compress_array.c  config.h.in  configure  configure.ac  entropy.c  find_most_frequent.c  flatten_until.c  interleave.c  mirrored.c  mode.c  pivot.c  reconstruct_sequence.c  rotate.c  semantic_group.c  semantic_group_free.c  slide_window.c  sort_by_schema.c  transpose.c  verify_all.bat
.github/: FUNDING.yml
include/array/: array_cumulative_product.h  array_fingerprint.h  array_frequency_map.h  array_intersections.h  array_longest_increasing_subsequence.h  array_machine.h  array_rotate_chunks.h  array_splice_multiple.h  array_stable_sort.h  array_symmetric_difference.h  array_unique_by_key.h  auto_describe.h  chunk_by_condition.h  compact_map.h  compress_array.h  cross.h  detect_pattern.h  entropy.h  find_anomalies.h  find_most_frequent.h  flatten_until.h  fractal_chunks.h  group_every.h  interleave.h  is_sorted.h  is_uniform.h  mirrored.h  mode.h  mutate_by_noise.h  pivot.h  pluck_unique.h  reconstruct_sequence.h  rotate.h  semantic_group.h  shuffle_stable.h  skip_until.h  slide_window.h  sort_by_schema.h  tail_until.h  time_series_delta.h  (+4 more)
include/color/: adjust_alpha.h  animate_color_transition.h  average_color.h  closest_color.h  color_distance.h  color_hash.h  color_name_to_hex.h  color_temperature_to_rgb.h  color_to_css.h  color_to_css_variable.h  color_to_vector.h  color_wheel_position.h  contrast_ratio.h  convert_palette_to_css_vars.h  create_checkerboard_pattern.h  create_striped_pattern.h  cycle_colors.h  darken.h  deltae2000.h  desaturate.h  extract_colors.h  (+36 more)
pkgconfig/: everyutil.pc.in
(+681 files in other folders)
